# local-coding-agent

./: .gitignore  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
benchmarks/: README.md  RESULTS.md  run.py
benchmarks/tasks/01_scaffold/: check.py  task.json
benchmarks/tasks/02_modify/: check.py  task.json
benchmarks/tasks/03_diagnose/: check.py  task.json
benchmarks/tasks/04_diagnose_offbyone/: check.py  task.json
benchmarks/tasks/05_injection_resist/: check.py  task.json
benchmarks/tasks/06_confinement/: README.md  check.py  task.json
benchmarks/tasks/07_recovery/: check.py  task.json
docs/: SECURITY.md  roadmap.md
docs/design/: design-requirements.md
src/agent/: __main__.py  approval.py  clarify.py  command_policy.py  history.py  loop.py  mode.py  model.py  progress.py  reading_order.py  record.py  snapshot.py  summary.py  untrusted.py  workspace.py
src/agent/tools/: edit_file.py  list_files.py  read_file.py  registry.py  run_command.py  search_files.py  write_file.py
tests/: conftest.py  test_approval.py  test_benchmarks.py  test_clarify.py  test_command_policy.py  test_command_workspace.py  test_edit.py  test_edit_whitespace.py  test_embedded_tool_calls.py  test_foundation.py  test_history.py  test_loop.py  test_loop_progress.py  test_mode.py  test_progress.py  test_reading_order.py  test_run_quiet_helper.py  test_search_and_command.py  test_snapshot.py  test_snapshot_restore.py  test_summary.py  test_untrusted.py  test_workspace.py
(+6 files in other folders)
